--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@types/node": "^14.14.41",
         "electron": "^4.2.9",
         "electron-builder": "^22.10.5",
+        "eslint": "7.12.1",
         "typescript": "^4.2.4"
     },
     "build": {
@@ -26,5 +27,13 @@
     "dependencies": {
         "commonjs": "^0.0.1",
         "normalize.css": "^8.0.1"
+    },
+    "peerDependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/parser": "^4.22.0",
+        "eslint-config-standard": "^16.0.2",
+        "eslint-plugin-import": "2.22.1",
+        "eslint-plugin-node": "11.1.0",
+        "eslint-plugin-promise": "4.2.1"
     }
 }
