--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
     "version": "0.1.1",
     "author": "chitaotao",
     "license": "AGPL-3.0-or-later",
-    "description": "My Electron app",
+    "description": "Local chat",
     "main": "main.js",
     "devDependencies": {
         "@types/node": "^14.14.41",
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/parser": "^4.22.0",
         "electron": "^4.2.9",
         "electron-builder": "^22.10.5",
-        "eslint": "7.12.1",
+        "eslint": "^7.25.0",
+        "eslint-config-standard": "^16.0.2",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.3.1",
         "typescript": "^4.2.4"
     },
     "build": {
@@ -26,14 +32,9 @@
     },
     "dependencies": {
         "commonjs": "^0.0.1",
-        "normalize.css": "^8.0.1"
+        "normalize.css": "^8.0.1",
+        "prettier": "^2.2.1",
+        "prettier-eslint": "^12.0.0"
     },
-    "peerDependencies": {
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
-        "eslint-config-standard": "^16.0.2",
-        "eslint-plugin-import": "2.22.1",
-        "eslint-plugin-node": "11.1.0",
-        "eslint-plugin-promise": "4.2.1"
-    }
+    "peerDependencies": {}
 }
